packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/valid/merge-multiple-files/foreign-elements/input-003.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing if a foreign element without a preceding ontology element is accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <f:event xmlns:f="http://foreign/namespace"/>
</edxml>
