packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/object-type-has-invalid-regex.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event structure validation, verify
if an object type having an invalid regular expression is rejected
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:0:cs" regexp="("/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
